feat: add Post to revoke all sessions & reject tokens issued before token_valid_afeter in the auth middleware
